# ststracker-server

./: Cargo.toml
src/: main.rs
src/model/: api.rs  application.rs  mod.rs  twitch.rs
src/view/: mod.rs
